docs: close all documentation and configuration gaps
This commit addresses all identified gaps from comprehensive analysis:

Phase 1: Java 26 Standardization
- Update CONTRIBUTING.md: Java 25+ → Java 26+ features (line 313)
- Update your-first-doctest.md: Java 25 → 26, <release>25</release> → 26
- Update docs/index.md: Java 25 → 26, version 2.6.0 → 2026.1.0

Phase 2: DevOps Documentation Enhancement
- Create docs/devops/local-development.md (comprehensive IDE/setup guide)
- Create docs/devops/failure-recovery.md (failure scenarios & recovery)
- Create docs/devops/infrastructure-research.md (complete DevOps reference)
- Create docs/devops/gpg-management.md (GPG key management)
- Create docs/devops/index.md (DevOps documentation index)
- Add concurrent release handling to failure-recovery.md
- Add RC promotion guide to failure-recovery.md
- Clarify year boundary handling in infrastructure-research.md
- Fix workflow count: 9 → 10 workflows

Phase 3-4: Documentation Verification
- Verify README.md, CLAUDE.md, CHANGELOG.md are consistent
- All already using CalVer 2026.1.0 and Java 26

Related: Comprehensive gap analysis across DevOps, API, and project docs